new route short names for trams